2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: David Moore

	* gst/schedulers/gstoptimalscheduler.c: (group_has_element),
	(schedule_group), (gst_opt_scheduler_schedule_run_queue),
	(group_migrate_connected):
	* testsuite/schedulers/Makefile.am:
	  fix for #142813 (Deadlock in optimal scheduler)

2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Wim Taymans

	* gst/schedulers/gstoptimalscheduler.c: (group_has_element),
	(gst_opt_scheduler_schedule_run_queue),
	(gst_opt_scheduler_get_wrapper), (get_group),
	(group_migrate_connected):
	* testsuite/schedulers/Makefile.am:
	  fix for #147819 (Add some checks in the opt scheduler)

2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Benjamin Otte

	* gst/gstelementfactory.c: (__gst_element_details_set):
	  fix for #147929: running gst-register in non-utf8 locale can cause
	  invalid registry

2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Wim Taymans

	* gst/schedulers/gstoptimalscheduler.c: (group_num_elements),
	(group_has_element), (element_get_reachables_func),
	(group_migrate_connected):
	  fix for #147894 (opt scheduler decoupled elements mismanagement)
	* testsuite/schedulers/Makefile.am:
	  testsuite app now passes

2004-07-19  Wim Taymans  <wim@fluendo.com>

	* testsuite/schedulers/147819.c: (handoff_identity1),
	(handoff_identity2), (main):
	* testsuite/schedulers/Makefile.am:
	Added testcase for bug 147819

2004-07-19  Wim Taymans  <wim@fluendo.com>

	* testsuite/schedulers/147894.c: (queue_empty), (queue_filled),
	(handoff_identity), (main):
	* testsuite/schedulers/Makefile.am:
	Added testcase for bug 147894

2004-07-16  Wim Taymans  <wim@fluendo.com>

	* testsuite/schedulers/142183-2.c: (handoff_identity), (main):
	* testsuite/schedulers/142183.c: (handoff_identity), (main):
	* testsuite/schedulers/Makefile.am:
	Added testsuite for bug 142183 in its two incarnations. Refcount