@@ -12,7 +12,7 @@ tests_pass = \
 
 # don't enable this one unless it actually works.
 #	useless_iteration
-tests_fail = 
+tests_fail = 147894-2
 tests_ignore =
 
 unlink_src_SOURCES = unlink.c
