@@ -1,3 +1,12 @@
+2004-07-20  Wim Taymans  <wim@fluendo.com>
+
+	* testsuite/schedulers/147894-2.c: (queue_empty), (queue_filled),
+	(handoff_identity), (main):
+	* testsuite/schedulers/147894.c: (queue_empty), (queue_filled),
+	(handoff_identity), (main):
+	* testsuite/schedulers/Makefile.am:
+	Added failing testcase for variant of #147894
+
 2004-07-20  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	patch by: David Moore
